objects/wkitsm__ConfigurationItemClassFieldMapping__mdt.object
<CustomObject>
    <description>Map data from Configuration Item Class fields to Asset fields during CMDB synchronization</description>
    <fields>
        <fullName>wkitsm__AssetField__c</fullName>
        <description>The full API name of the Asset field</description>
        <inlineHelpText>Full API name of the Asset field to map (example: wkitsm_OnlineStatus_c)</inlineHelpText>
        <label>Asset Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ConfigurationItemClassField__c</fullName>
        <description>The field name to map for the Configuration Item Class</description>
        <inlineHelpText>Configuration Item Class field to map to the Asset field</inlineHelpText>
        <label>Configuration Item Class Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ConfigurationItemClassName__c</fullName>
        <description>The name of the Configuration Item Class</description>
        <inlineHelpText>For a list of available classes, see the Configuration Item Class menu item in IT Service Center.</inlineHelpText>
        <label>Configuration Item Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Configuration Item Class Field Mapping</label>
    <pluralLabel>Configuration Item Class Field Mappings</pluralLabel>
</CustomObject>